@@ -1,3 +1,6 @@
+  - Remove $RENTAL_BUFFER and $PARCEL_BUFFER
+  - Fix $SHIPPING_BUFFER from 3 to 2
+
 v0.0.12   Tue, 14 Feb 2017 12:27:47 +0900
   - Add %PAY_METHOD_MAP
 
